Client/src/components/Dashboard/MainBody/Pages/overview/components/components.module.css
@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');

/* CHECKLIST */
.checklistTitle{
    font-family: 'Silkscreen', sans-serif;
    color: whitesmoke;
    font-size: 18px;
}
.checkList_listDiv{
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: scroll;
}
.checklist{
    height: fit-content;
    width: 90%;
    padding: 5px 0;
    margin: 5px 0;
    border-radius: 5px;
    font-size: 18px;
    display: flex;
    align-items: center;
    background-color: rgb(29, 29, 29);
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
    color: white;
    position: relative;
}
.checkList_list_content{
    display: flex;
    width: 80%;
}
.optionsChecklist{
    position: absolute;
    right: 0;
}
.MdDelete:hover{
    color: red;
    cursor: pointer;
}
.MdEdit:hover{
    color: greenyellow;
    cursor: pointer;
}
.EditTitle{
    height: 30px;
    background-color: #2f2f2f;
    color: white;
    border: none;
    border-bottom-style: outset;
    margin: 0 10px;
    width: 315px;
    border-radius: 1px;
}
.EditTitle:focus{
    outline: none;
}
/* KARBAN BOARD */

.todo_Div{
    /* background-color: antiquewhite; */
    height: fit-content;
    width: 33.3%;
    border-radius: 10px 0px 0px 10px;
    overflow-y: scroll;
    overflow-x: hidden;
}
.doin_Div{
    /* background-color: aquamarine; */
    height: fit-content;
    width: 33.3%;
    overflow-y: scroll;
    overflow-x: hidden;
}
.done_Div{
    /* background-color: blue; */
    height: fit-content;
    width: 33.3%;
    border-radius: 0px 10px 10px 0px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.todo_Div_title{
    height: 60px;
    background-color:#1b1b1b;
    width: 100%;
    color: white;
    border-radius: 10px 0px 0px 10px;
    font-size: 20px;
    font-weight: 600;
    font-family: 'Silkscreen', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
}
.doin_Div_title{
    height: 60px;
    background-color:#1b1b1b;
    width: 100%;
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: 'Silkscreen', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
}
.done_Div_title{
    height: 60px;
    background-color:#1b1b1b;
    width: 100%;
    color: white;
    border-radius: 0px 10px 10px 0px;
    font-size: 20px;
    font-weight: 600;
    font-family: 'Silkscreen', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
}

.Div_cards{
    height: 390px;
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
}
.todo_Div_card{
    height: 50px;
    width: 95%;
    background-color: rgb(26, 26, 26);
    margin: 8px 0px;
    border-radius: 10px;
    cursor: pointer;
    overflow-y: scroll;
    overflow-x: hidden;
    display: flex;
    align-items: center;
    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
}
.todo_Div_card:hover{
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
}
.card_title_div{
    /* background-color: aliceblue; */
    height: 60%;
    width: 100%;
    color: white;
    padding: 0px 5px;
    cursor: pointer;
}
.card_DateTime_div{
    /* background-color: aqua; */
    height: 40%;
    width: 100%;
    cursor: pointer;
}

@media only screen and (max-width: 767px) {
    .todo_Div_title{
        font-size: small !important;
    }
    .done_Div_title{
        font-size: small !important;
    }
    .doin_Div_title{
        font-size: small !important;
    }
  }

